src/objects/LeanData__Temporary_Marketing_Touch__c/LeanData__Temporary_Marketing_Touch__c.object-meta.xml
<CustomObject>
    <label>Temporary Marketing Touch</label>
    <nameField>
        <displayFormat>MT-{000000000}</displayFormat>
        <label>Temporary_Marketing_Touch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temporary Marketing Touches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>