src/objects/LeanData__Temporary_Marketing_Touch__c/fields/LeanData__Campaign__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Temporary Marketing Touches</relationshipLabel>
    <relationshipName>Temporary_Marketing_Touches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>