src/objects/LeanData__Temporary_Marketing_Touch__c/fields/LeanData__FT_Bookings_Attribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>LeanData__FT_Bookings_Attribution_Amount__c</fullName>
    <formula>IF( LeanData__Opportunity__r.IsWon &amp;&amp; LeanData__Opportunity__r.IsClosed, LeanData__FT_Attribution_Amount__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FT Bookings Attribution Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>